Bug 90935 - Calc crashes on opening/closing some dialog boxes
Summary: Calc crashes on opening/closing some dialog boxes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-04-29 15:03 UTC by Dennis Francis
Modified: 2015-12-17 08:59 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
backtrace of the crash when doing the Method - 3 (9.16 KB, text/plain)
2015-04-29 15:03 UTC, Dennis Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Francis 2015-04-29 15:03:20 UTC
Created attachment 115187 [details]
backtrace of the crash when doing the Method - 3

Calc crashes when I try to open/close some dialog boxes. I am not sure this issue is specific to Calc.

At least the following methods causes Calc to crash :

Method -1 :

1) Open Calc
2) Click Tools > Customize
3) Click Cancel button


Method - 2 :

1) Open Calc
2) Click Data > Sort
3) Click Cancel button

Method - 3 :

1) Open Calc
2) Open any valid csv file
3) The import dialog box appears momentarily, but then Calc crashes.


I am using LO compiled from latest master :
HEAD : commit 2932d2db599c09ecce3faa2d627e9ee4f251183a

I have attached backtrace of the crash when doing the Method - 3.
Comment 1 Buovjaga 2015-04-29 18:30:36 UTC
Not reproduced with any methods. My builds are a couple of days behind, though..

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+ (x64)
Build ID: f0edb677f09ad338e22ac3b5d91497b4479e0b3c
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-04-27_01:54:20
Locale: fi_FI

Ubuntu 15.04 64-bit 
Version: 5.0.0.0.alpha1+
Build ID: daa28969374f628a8cb265fcb28a73daabcb7236
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-04-25_00:48:25
Locale: en_US
Comment 3 raal 2015-04-29 19:17:45 UTC
Cannot reproduce with Version: 5.0.0.0.alpha1+
Build ID: 59adad74084e9281887e3f78a225794f37b784d7
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-04-29_12:40:39
Comment 4 Dennis Francis 2015-04-29 19:27:57 UTC
(In reply to Dennis Francis (ldcs.co.in) from comment #2)
> I could also reproduce with Calc from the following file :
> 
> http://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@46-TDF/
> current/master~2015-04-29_12.40.39_LibreOfficeDev_5.0.0.0.alpha1_Linux_x86-
> 64_rpm.tar.gz

I forgot to mention that for this build, only Method - 3 works.
Comment 5 Dennis Francis 2015-04-29 19:29:51 UTC
(In reply to raal from comment #3)
> Cannot reproduce with Version: 5.0.0.0.alpha1+
> Build ID: 59adad74084e9281887e3f78a225794f37b784d7
> TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time:
> 2015-04-29_12:40:39


Did you try Method -3 with this build ? Could you please specify your OS ?
Comment 6 Julien Nabet 2015-05-02 10:38:09 UTC
On pc Debian x86-64 with master sources updated today (+ dgbutil enabled) I could reproduce the crash but had no bt.

However, I retrieved this interesting part of gdb:
warn:legacy.osl:7004:1:vcl/source/window/window.cxx:271: Window ( 7VclVBox ()) with live children destroyed:  N7formula7ParaWinE ()
Window ( 7VclVBox ()) with live children destroyed:  N7formula7ParaWinE ()
[Thread 0x2aaac9fe8700 (LWP 7024) exited]
[Thread 0x2aaac86f1700 (LWP 7017) exited]
[Thread 0x2aaac82b3700 (LWP 7016) exited]
[Thread 0x2aaac63ab700 (LWP 7013) exited]
[Thread 0x2aaac52cf700 (LWP 7012) exited]
[Thread 0x2aaac0829700 (LWP 7010) exited]
[Thread 0x2aaaaab29200 (LWP 7004) exited]
[Inferior 1 (process 7004) exited with code 01]

Caolan: thought you might be interested in this one since it could be related to vcl part.
Comment 7 Julien Nabet 2015-05-02 10:39:01 UTC
BTW, I could reproduce just with this:
1) Open Calc (brand new file)
2) Open function wizard on any cell
3) Click Cancel
=> crash
Comment 8 Matthew Francis 2015-05-06 13:48:36 UTC
The issues mentioned in comment 0 (1) and (2), and comment 7 all die with similar console output so I'm assuming for the sake of argument they are all the same issue.

All three began at the below commit, and are still present on master as of 8c4bbc0a0ddb1ea8051f0be5a42ef128cf7d891e
Adding Cc: to michael.meeks@collabora.com; Could you possibly take a look at this one? Thanks

commit e8b97a52c96df9c8e8055407b1e40ed7cb9cfc67
Merge: 2b0be6c 0cde74f
Author: Michael Meeks <michael.meeks@collabora.com>
Date:   Tue Apr 28 11:41:31 2015 +0100

    Merge remote-tracking branch 'origin/feature/vclptr'
    
    Resolve several thousand lines of conflicts.
Comment 9 Michael Meeks 2015-05-07 15:12:08 UTC
csv import was fixed a way back; poking at the other issues now; thanks ! =)
Comment 10 Commit Notification 2015-05-07 15:22:23 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=da49275807c8cf1dd7362a531f321f9f756e82d1

tdf#90935 - function wizard crash fix.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2015-05-07 15:37:50 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=65376dad896d5dfc1fd6665fc5fdd1833007ce20

tdf#90935 - fix dispose ordering for tools->customize dialog.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Michael Meeks 2015-05-07 18:52:43 UTC
thanks ! =)
Comment 13 Commit Notification 2015-05-07 18:53:53 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94b1c8ca69c888aa15e5736f70a966dfc04273ca

tdf#90935 - calc / sort dialog fixage.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Robinson Tryon (qubit) 2015-12-17 08:59:32 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]