tdf#90935 - function wizard crash fix.

Change-Id: I1344e194f8fd5d2c0ffff4e8b075564df32706a8