include/formula/formula.hxx
@@ -57,6 +57,7 @@ public:
                                             ,IFunctionManager* _pFunctionMgr
                                             ,IControlReferenceHandler* _pDlg = NULL );
     virtual ~FormulaModalDialog();
+    virtual void dispose() SAL_OVERRIDE;
 
 private:
     ::std::unique_ptr<FormulaDlg_Impl> m_pImpl;
